[tool.poetry]
name = "site_parser"
version = "1.0.0"
description = "Package for parse information from sites with existing decoders"
authors = ["Vldmr BS <burbiksvy@gmail.com>"]
readme = "README.md"
repository = "https://github.com/VLDMR-BS/parser"

[tool.poetry.dependencies]
# general
python = "~3.8"
bs4 = "^0.0.1"
requests = "^2.27.1"
pandas = "^1.4.2"
fire = "^0.4.0"


[tool.black]
line-length = 90
target-version = ["py38"]

[tool.isort]
src_paths = ["evonets", "mlops"]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 90
lines_after_imports = 2

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
